Added array marshaling extension method.

--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Formats\Mpeg\MpegAudioFile.cs" />
     <Compile Include="Extensions\Paths.cs" />
     <Compile Include="Basics\OrderedRange.cs" />
+    <Compile Include="Extensions\Marshaling.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
