more streamlining of design work on simplification fixed a bug in substitution by multiple variables

--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -160,6 +160,9 @@
     <Compile Include="Calculus\ExplicitFunction.cs" />
     <Compile Include="Calculus\ExplicitValue.cs" />
     <Compile Include="Calculus\Simplification.cs" />
+    <Compile Include="Calculus\Terms\Rewriting\Rules\Evaluation.cs" />
+    <Compile Include="Calculus\Terms\Rewriting\Rules\Sorting.cs" />
+    <Compile Include="Calculus\Terms\Basic\Logarithm.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
