--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -199,5 +199,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
 </Project>
